# Vitis_Model_Composer

./: README.html  README.md  example_access.md  index.csv  index.mat  index.txt
AIENGINE/: README.html  README.md
AIENGINE/DualStreamSSR_FIR/: README.html
AIENGINE/Importing_AIE_blocks/: README.html  README.md
AIENGINE/Run_Time_Parameters/: README.html
AIENGINE_plus_PL/: README.html  README.md
AIENGINE_plus_PL/AIE_HDL/: README.html
AIENGINE_plus_PL/AIE_HLS/: README.html
AIENGINE_plus_PL/FFT2D/: README.html
AIENGINE_plus_PL/SingleStreamSSR_FIR_withPL/: SingleStreamSSRwithPL.slx
AIENGINE_plus_PL/Tx_chain_200MHz/: README.md
AIE_HDL/: README.md
AIE_HDL/AIE_HDL_cosim/: README.md  mysquare.cc  mysquare.h  passThrough.slx
AIE_HDL/AIE_HDL_cosim_rtl_blackbox/: AIE_RTL_cosim_black_box.slx
AIE_HDL/Connecting_AIE_to_HDL/: README.md
AIE_HDL_cosim/: mysquare.cc  mysquare.h  passThrough.slx
AIE_HDL_cosim_rtl_blackbox/: AIE_RTL_cosim_black_box.slx  polar_clip_config.m
AIE_HDL_cosim_rtl_blackbox/src/: kernels.h
AIE_HLS/: README.md  aie_hls.slx  readcomplexdata.m
AIE_HLS/AIE_HLS/: README.md  aie_hls.slx  aie_hls_std_complex.slx
AIE_HLS/src/: graph.cpp  graph.h  hls_kernels.h  kernels.h  polar_clip.cpp
AIE_HLS/sw/: host.cpp
AIEngine/Examples/: README.html  README.md
AIEngine_Library/Examples/: README.md
Connecting_AIE_to_HDL/: README.md
DSPlib/: README.md
DSPlib/fft/: README.md  fft_dsp_lib.cpp  fft_dsp_lib.slx
DSPlib/fir/: README.md  fir.slx  fwizdef.fda
DSPlib/matrix_multiply/: README.md  (+2 more)
Examples/AIENGINE/Export_to_Vitis/vitis_workspace/mm2s/mm2s/hls/impl/misc/drivers/mm2s_v1_0/src/: CMakeLists.txt  xmm2s.c
Examples/AIENGINE/Export_to_Vitis/vitis_workspace/s2mm/s2mm/hls/impl/ip/drivers/s2mm_v1_0/src/: CMakeLists.txt  Makefile  xs2mm_sinit.c
HDL/: README.html  README.md
HLS/: README.html  README.md
Importing_AIE_blocks/: README.md
QuickGuides/: README.html  README.md
Run_Time_Parameters/: README.md
Setting_Signal_Size/: README.md
Tutorials/: README.html  README.md
Variable_Size_Signals/: README.md  Variable_Size_Signal.slx
aiengine/: README.md
complex_fir32_8cores/: FIR_32taps_OT_DB.pptx  compare.m  convert_to_array.m  fir_32tap_8cores.slx  setup.m
general_guides/: supported_matlab_versions.md
hdl/: README.html
heterogenous_designs/: README.html  README.md
hls/: README.html  README.md
mri_2d_fft_aie_hls_kernel/: README.md  mri_2d_fft_aie_HLS_Kernel.slx  mri_2d_fft_aie_HLS_Kernel_codegen.slx  preload_fcn.m  to_fixed_size.mexa64
quick_guides/: README.md
(+2024 files in other folders)
